--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <div class="header_reg">
                     <button class="reg_btn">
                         <p class="reg_text">Register</p>
-                    </button>
+                    </button>df
                 </div>
             </div>
         </header>
